2007-06-13  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle cursor while rebuilding
	* src/glade/gramps.glade: fix label placement

2007-06-13  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle broken dbs that have been opened
	* src/DbState.py: handle broken dbs that have been opened
	* src/GrampsDbUtils/_Backup.py: write intermediate file firs to make
	sure no errors occur when writing, then replace old backups

2007-06-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Improve tooltip for latin-1 option.

2007-06-12  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: Fix width error

2007-06-12  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py:
	* src/ReportBase/__init__.py:
	* src/ReportBase/_Bibliography.py:
	* src/ReportBase/_Endnotes.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/BookReport.py:
	* src/plugins/DetAncestralReport.py:
	  Enhance the source endnotes in some text reports.

2007-06-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: better rebuild recovery
	* src/GrampsDb/_GrampsDbConst.py: better rebuild recovery
	* src/GrampsDb/_GrampsDBCallback.py: better rebuild recovery
	* src/DbManager.py: better rebuild recovery
	* src/glade/gramps.glade: better rebuild recovery
	* src/const.py.in: better rebuild recovery
	* src/QuestionDialog.py: better rebuild recovery
	* src/GrampsDbUtils/_ReadGedcom.py: better rebuild recovery
	* src/ArgHandler.py: better rebuild recovery
	* src/DbLoader.py: better rebuild recovery

2007-06-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: detection and recovery from db errors
	* src/GrampsDb/_GrampsDBDir.py: detection and recovery from db errors
	* src/GrampsDb/_GrampsBSDDB.py: detection and recovery from db errors
	* src/DbManager.py: detection and recovery from db errors
	* src/DbState.py: detection and recovery from db errors