@@ -1,4 +1,7 @@
 2007-06-13  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDbUtils/_Backup.py (__do_export): check for existance before deleting
+
+2007-06-13  Don Allingham  <don@gramps-project.org>
 	* src/DbManager.py: handle cursor while rebuilding
 	* src/glade/gramps.glade: fix label placement
 
